--- a/index.html
+++ b/index.html
@@ -10,25 +10,22 @@
 
   <div class="card">
     <div class="image">
-      <img src="./images/drawers.jpg" alt="">
+      <img src="./images/JS.jpg" alt="">
     </div>
     <div class="content">
       <h2>
-        Shift the overall look and feel by adding these wonderful 
-        touches to furniture in your home
+        JavaScript: Essential for Web Development
       </h2>
       <p>
-        Ever been in a room and felt like something was missing? Perhaps 
-        it felt slightly bare and uninviting. I’ve got some simple tips 
-        to help you make any room feel complete.
+        JavaScript powers interactive and dynamic web experiences. It integrates smoothly with HTML and CSS, enabling everything from animations to complex apps. Essential for modern web development, it fuels creativity and innovation online.
       </p>
       <div class="user">
         <div class="user-img">
-          <img src="./images/avatar-michelle.jpg" alt="">
+          <img src="./images/user-profile-pic.jpg" alt="">
         </div>
         <div class="user-name">
-          <p class="name">Michelle Appleton</p>
-          <p class="date">28 Jun 2020</p>
+          <p class="name">@ayushyadavz</p>
+          <p class="date">27 July 2024</p>
         </div>
         <div class="share-btn">
           <img src="./images/icon-share.svg" alt="">
