Added some extra codes in files deleted some files.

--- a/index.html
+++ b/index.html
@@ -7,21 +7,16 @@
   <title>Article preview component</title>
 </head>
 <body>
-
   <div class="card">
     <div class="image">
-      <img src="./images/JS.jpg" alt="">
+      <img src="./images/JS.jpg" alt="Javascript Image">
     </div>
     <div class="content">
-      <h2>
-        JavaScript: Essential for Web Development
-      </h2>
-      <p>
-        JavaScript powers interactive and dynamic web experiences. It integrates smoothly with HTML and CSS, enabling everything from animations to complex apps. Essential for modern web development, it fuels creativity and innovation online.
-      </p>
+      <h2>JavaScript: Essential for Web Development</h2>
+      <p>JavaScript powers interactive and dynamic web experiences. It integrates smoothly with HTML and CSS, enabling everything from animations to complex apps. Essential for modern web development, it fuels creativity and innovation online.</p>
       <div class="user">
         <div class="user-img">
-          <img src="./images/user-profile-pic.jpg" alt="">
+          <img src="./images/user-profile-pic.jpg" alt="User profile picture">
         </div>
         <div class="user-name">
           <p class="name">@ayushyadavz</p>
@@ -31,14 +26,14 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="14"><path d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
         </div>
         <div class="sharebox hide-it">
-					<p class="share">SHARE</p>
-					<a class="share-icon-fb" href="#"><img src="./images/icon-facebook.svg" alt="facebook-icon"></a>
-					<a class="share-icon-tweet" href="#"><img src="./images/icon-twitter.svg" alt="twitter-icon"></a>
-					<a class="share-icon-pint" href="#"><img src="./images/icon-pinterest.svg" alt="pinterest-icon"></a>
-      </div>
-    </div>
+          <p class="share">SHARE</p>
+          <a class="share-icon" data-platform="facebook" href="#"><img src="./images/icon-facebook.svg" alt="facebook-icon"></a>
+          <a class="share-icon" data-platform="twitter" href="#"><img src="./images/icon-twitter.svg" alt="twitter-icon"></a>
+          <a class="share-icon" data-platform="pinterest" href="#"><img src="./images/icon-pinterest.svg" alt="pinterest-icon"></a>
+        </div>
+     </div>
+    </div> 
   </div>
-  
   <script src="./index.js"></script>
 </body>
 </html>
